<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/rl"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="demo.main.devanshukanik.demo.RecordAudio">




    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/recordinginitial"
        android:textColor="@color/LScolor"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <View android:layout_height="1dp"
        android:id="@+id/v1"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_below="@+id/text1"
        android:background="@color/LScolor"/>
    <ImageView
        android:id="@+id/micImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/v1"
        android:contentDescription="@string/imagecontdesc"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="30dp"
          android:layout_marginBottom="30dp"
        android:background="@drawable/record" />
    <View android:layout_height="1dp"
        android:id="@+id/v2"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_below="@+id/micImage"
        android:background="@color/LScolor"/>
<ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v2"
        android:contentDescription="@string/imagecontdesc2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:src="@drawable/headericon" />
    <LinearLayout  android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/linear1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/start"
            style="@android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_bg"
            android:textColor="#ffffff"
            android:padding="5dp"
            android:text="@string/btRecord"/>

       
        <Button
            android:id="@+id/play"
            style="@android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:enabled="false"
            android:layout_marginLeft="10dp"
             android:background="@drawable/button_bg"
            android:textColor="#ffffff"
            android:padding="5dp"
            android:text="@string/btPlay" />

    </LinearLayout>

    <LinearLayout  android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_above="@+id/linear1"
        android:id="@+id/linear2"
        android:visibility="visible"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >


         <Button
            android:id="@+id/save"
            style="@android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:layout_marginLeft="10dp"
            android:enabled="false"
             android:background="@drawable/button_bg"
            android:textColor="#ffffff"
            android:padding="5dp"
            android:text="@string/donebtn" />
        
  
    </LinearLayout>

    <WebView
        android:id="@+id/imganim"
        android:visibility="gone"
        android:layout_width="100dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v1"
        android:layout_alignTop="@+id/micImage" />

</RelativeLayout>
