<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"

    tools:context="com.liveplatform.qalivestuff.Browser">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/splash"
            android:layout_width="wrap_content"
            android:minWidth="400dp"
            android:minHeight="150dp"
            android:scaleType="fitXY"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/imagecontdesc2"
            android:padding="20dp"
            android:src="@drawable/headericon" />

        <SupportClasses.CustomSwipeToRefresh
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/swipe_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/progressBar" >

            <SupportClasses.CustomWebView
                android:id="@+id/webView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:touchscreenBlocksFocus="true"
                android:focusableInTouchMode="true" >
            </SupportClasses.CustomWebView>
        </SupportClasses.CustomSwipeToRefresh>
        <ProgressBar
            android:id="@+id/progressBar"
            android:max="100"
            android:progress="10"
            android:visibility="visible"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="top"
            android:layout_margin="2dp"
            android:layout_marginEnd="110dp"
            android:layout_marginRight="110dp"
            android:progressDrawable="@drawable/progresscustom" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:visibility="gone"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:id="@+id/downloadpopup"
            android:background="@color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/download_message"
                android:textSize="15sp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="start"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/openfile"
                android:id="@+id/opendownloads"
                android:textSize="15sp"
                android:layout_margin="5sp"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
    </FrameLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/splashlo"
        android:visibility="gone"
        android:background="@color/white"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/splash"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:id="@+id/imageView" />
        <ProgressBar
            android:id="@+id/progressBar2"
            android:max="100"
            android:progress="5"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:layout_marginBottom="30dp"
            android:progressDrawable="@drawable/progresscustom_alt" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:ems="10"
            android:textColor="@color/LScolor"
            android:layout_above="@+id/progressBar2"
            android:layout_margin="10dp"
            android:id="@+id/tvMsg" />

    </RelativeLayout>

</RelativeLayout>
